
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    email it to: develop@darkbot.info
    Support (only): http://forum.darkbot.info
    *******************************************************

Darkbot 7.0-RC9: Oct 5th, 2003
	- This feature was already added, but I never documented it...
	  The R~ variable (random nickname) now works in RDB topic
	  responses.  Look for randomstuff compatibility in the near
	  future, but first i have to rewrite do_random_stuff() to
	  accept a channel arguement.

	- I was reading through this WHATSNEW file, and corrected
	  a few typos that were made.

	- I removed the run_deop() code.  It didn't work very 
	  well anyway, or at all actually.  I plan on reintroducing
	  this whenever I can get some free time.

	- Fixed Ebonic language file.

	- Added Taiwanish language option.

Darkbot 7.0-RC8: June 20th, 2003
	- I screwed up the Makefile by accident, adding some
	  new features, and I hadn't finished yet when I 
	  committed. OOPS. Fixed now.

	- Updated more depricated URL strings.

	- Updated language files.

	- Minor changes on startup splash screen.

	- Support forum URL is now http://www.darkbot.org/forum

	- Updated the default servers.ini file to reflect the
	  changes.

	- You can now use Darkbot on servers which require a 
	  connection password. Check servers.ini for an 
	  example.

	- Updated some outdated text in the configure script.

	- Darkbots now default to irc.darkbot.org #darkbot.
 	  Please edit your setup.ini and servers.ini files to 
	  minimize traffic, since that is also our help channel.

Darkbot 7.0-RC7: June 2nd, 2003
	
	- Updated the INSTALL.txt file to reflect some support
	  changes.

	- Fix for possible problems with counting in datasearch
	  algorithm.  long was changed to size_t.

	- Fixed bug that prevented ACTIONs from being used on
	  RDB responses.

	- Suppressed more warnings when compiling on Solaris